2008-09-18  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in: Use AC_SEARCH_LIBS to check for
	  MP4SetMetadataAlbumArtist in libmp4v2.
	  Reword several libmp4v2 macro definition descriptions.
	  Minor whitespace cleanups.

2008-09-07 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* configure.in
	  src/mp4file.c: Check whether MP4 AlbumArtist functions are
	  available (fixes compilation error with older versions of
	  libmp4v2).

	* README: added download link for V1.6 of libmp4v2

	* src/mp3file.c: Add saving of AlbumArtist field. Thanks to Dudy
	  Kohen for the patch.

2008-08-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c: Handle Artist and AlbumArtist fields differently:
	  For Artist: try the Artist tag and fall back to the Album Artist
	  tag if the former does not exist.
	  For Album Artist: set to the contents of the Album Artist tag,
	  but only if the Artist tag does exist.
	  Thanks to Dudy Kohen for the patch.

	* src/mp4file.c: do the same for mp4 files (the Album Artist tag
	  was not supported before).

2008-08-04 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c (read_extended_info): fixed valgrind
	  warning. Thanks to Andrea.

	* src/repository.c (sync_playlist_mode_automatic_toggled): fixed
	  memory leak. Thanks to Andrea.

	  (repwin_free): fixed memory leak. Thanks to Andrea.

	* src/mp3file.c (mp3_read_lame_tag, mp3_get_track_gapless,
	  mp3_get_track_lame_replaygain, set_uncommon_tag): fixed possible
	  compiler warnings.

	  (mp3_read_lame_tag, mp3_read_gapless): fixed memory
	  leaks. Thanks to Andrea.

	* src/mp3file.[ch]: Added "const" qualifier to filename arguments.

	* src/file.c (add_coverart): fixed memory leak. Thanks to Andrea.

	* src/details.c (details_get_item): fixed memory leak. Thanks to
	  Andrea.

	* src/prefs.c (get_list_from_buffer): fixed memory leaks.

	* src/prefsdlg.c (on_unsetdeps_checkbox_toggled): fixed memory
	  leak.
