@@ -1,4 +1,13 @@
-2008-09-18  Todd Zullinger  <tmzullinger at users.sourceforge.net>
+2008-09-21 Jorg Schuler <jcsjcs at users.sourceforge.net>
+
+	* src/mp3file.c (id3_tag_read): (partially) implement genre IDs in
+	  parenthesis according to
+	  http://www.id3.org/id3v2.3.0#head-42b02d20fb8bf48e38ec5415e34909945dd849dc
+	  Ignore genre IDs in parenthesis if a "refinement" is
+	  given. Otherwise use the first ID found as genre. Fixes tracker
+	  item 2113461.
+
+2008-09-18 Todd Zullinger  <tmzullinger at users.sourceforge.net>
 
 	* configure.in: Use AC_SEARCH_LIBS to check for
 	  MP4SetMetadataAlbumArtist in libmp4v2.
